feat: redis implementation, pagination, and reply wip
