# src/dtos/reply.dto.ts
@@ -1,0 +1,3 @@
+import { Reply } from '@prisma/client';
+
+export type CreateReplyDTO = Pick<Reply, 'content'>;
